<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cons_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_grey_corner_5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_des"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_verified_user_grey600_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/account_devide_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/md_grey_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_account"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/account"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/md_grey_800"
            android:textColorHint="@color/md_grey_500"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cons_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_grey_corner_5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cons_account">

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_des"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_https_grey600_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/password_devide_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/md_grey_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_password"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gs.keyboard.SecurityEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/mm"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/md_grey_800"
            android:textColorHint="@color/md_grey_500"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cons_repassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_grey_corner_5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cons_password">

        <ImageView
            android:id="@+id/img_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_des"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_https_grey600_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/repassword_devide_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/md_grey_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_repassword"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gs.keyboard.SecurityEditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/re_mm"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:layout_marginLeft="40dp"
            android:textColor="@color/md_grey_800"
            android:textColorHint="@color/md_grey_500"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Button
       android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cons_repassword"
        android:id="@+id/bt_register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:theme="@style/AccentColorButtonTheme"
        />

</android.support.constraint.ConstraintLayout>